# UniQUE-API

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  go.mod  go.sum
.github/workflows/: docker-tag.yaml
api/cmd/: main.go
api/internal/config/: config.go
api/internal/controller/errorresponse/: response.go
api/internal/controller/roles/: handler.go  requests.go  response.go
api/internal/controller/users/: handler.go  requests.go  response.go
api/internal/middleware/: cors.go  logger.go
api/internal/presenter/: server.go
api/pkg/: context.go
docs/: docs.go  swagger.json  swagger.yaml
environment/: docker-compose.yml
environment/go/: Dockerfile
environment/mysql/init/: init.sql
environment/mysql/migrate/: migrate.yml
src/: db.rs  main.rs
src/constants/: permissions.rs
src/docs/: mod.rs
src/middleware/: auth.rs  mod.rs  permission_check.rs
src/models/: access_tokens.rs  app.rs  apps.rs  auths.rs  code.rs  consents.rs  discord.rs  discords.rs  email_verification.rs  id_tokens.rs  mod.rs  oidc_authorizations.rs  prelude.rs  redirect_uris.rs  refresh_tokens.rs  role.rs  session.rs  sessions.rs  token_sets.rs  user.rs  user_app.rs  user_role.rs  users.rs
src/routes/: apps.rs  email_verify.rs  mod.rs  roles.rs  sessions.rs  users.rs
src/routes/common_dtos/: array_dto.rs  mod.rs
src/routes/roles_sub/: mod.rs  permissions.rs  search.rs  users.rs
src/routes/users_sub/: discord.rs  email_verify.rs  mod.rs  password.rs  password_reset.rs  permissions.rs  roles.rs  search.rs  sessions.rs
src/utils/: password.rs
unique-api/: go.mod
(+42 files in other folders)
