[package]
name = "UniQUE-API"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sea-orm = { version = "1.1.17", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.1.17"
dotenvy = "0.15"
thiserror = "2.0.17"
anyhow = "1"
validator = "0.20.0"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }