[package]
name = "UniQUE-API"
version = "1.0.0-alpha.14"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sea-orm = { version = "1.1.19", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "debug-print"] }
sea-orm-migration = "1.1.19"
dotenvy = "0.15"
thiserror = "2.0.17"
anyhow = "1"
validator = "0.20.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
hex = "0.4.3"
sha2 = "0.10.9"
futures = "0.3.31"
ulid = "1.2.1"
serde_with = "3.15.1"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
bitflags = "2.10.0"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
